# chuckles-rs

./: .gitignore  CLAUDE.md  Cargo.toml
data/: chuckles.desktop
openspec/changes/chuckles-image-viewer/: design.md  proposal.md  tasks.md
openspec/changes/chuckles-image-viewer/specs/configuration/: spec.md
openspec/changes/chuckles-image-viewer/specs/directory-navigation/: spec.md
openspec/changes/chuckles-image-viewer/specs/file-opening/: spec.md
openspec/changes/chuckles-image-viewer/specs/format-support/: spec.md
openspec/changes/chuckles-image-viewer/specs/fullscreen-mode/: spec.md
openspec/changes/chuckles-image-viewer/specs/geometric-editing/: spec.md
openspec/changes/chuckles-image-viewer/specs/image-viewing/: spec.md
openspec/changes/chuckles-image-viewer/specs/keyboard-navigation/: spec.md
openspec/changes/chuckles-image-viewer/specs/metadata-display/: spec.md
openspec/changes/chuckles-image-viewer/specs/windowed-mode/: spec.md
src/: app.rs  main.rs
src/config/: mod.rs  settings.rs
src/editing/: mod.rs  transforms.rs
src/formats/: decoder.rs  detection.rs  mod.rs
src/metadata/: exif_reader.rs  file_info.rs  mod.rs
src/ui/: canvas.rs  crop_overlay.rs  dialogs.rs  fullscreen.rs  header.rs  keyboard.rs  layout.rs  metadata_panel.rs  mod.rs  mouse.rs  state.rs  thumbnail_strip.rs  toolbar.rs
src/viewer/: directory.rs  mod.rs  navigation.rs
